tests/syntax_error/match_bad_with.jou
def main() -> int:
    match foo with 1:  # Error: expected function name, got an integer
